--- a/spring-boot/concurrency/build.gradle
+++ b/spring-boot/concurrency/build.gradle
@@ -1,3 +1,17 @@
-task wrapper(type: Wrapper){
-    gradleVersion = '7.4.1'
+plugins {
+    id 'maven-publish'
+}
+
+task wrapper(type: Wrapper) {
+    gradleVersion = "${gradleWrapperVersion}"
+}
+
+apply from: 'dependencies.gradle'
+
+publishing {
+    publications {
+        maven(MavenPublication) {
+            artifact tasks.named("jar")
+        }
+    }
 }
