fix: Added Domain

--- a/spring-boot/concurrency/dependencies.gradle
+++ b/spring-boot/concurrency/dependencies.gradle
@@ -1,3 +1,7 @@
 dependencies {
+    implementation project(":domain")
+    implementation project(":spring-batch")
     implementation group: 'org.apache.commons', name: 'commons-compress', version: '1.21'
+    implementation 'org.mapstruct:mapstruct:1.5.2.Final'
+    annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.2.Final'
 }
