--- a/spring-boot/application/src/main/resources/application.yaml
+++ b/spring-boot/application/src/main/resources/application.yaml
@@ -1,1 +1,10 @@
+spring:
+  jpa:
+    generate-ddl: true
+    hibernate:
+      ddl-auto: create
+  datasource:
+    url: jdbc:mysql://localhost:3306/todo_example?createDatabaseIfNotExist=true
+    username: root
+    password: deadhead
 
