--- a/spring-boot/build.gradle
+++ b/spring-boot/build.gradle
@@ -7,8 +7,9 @@ buildscript {
             [
                     'spring-batch',
                     'concurrency',
-                    'application',
-                    'domain'
+                    'domain',
+                    'utils',
+                    'application'
             ].contains(it.name)
         }
     }
@@ -65,6 +66,10 @@ allprojects {
             annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
             annotationProcessor 'org.projectlombok:lombok'
             testImplementation 'org.springframework.boot:spring-boot-starter-test'
+//            implementation 'org.springframework.boot:spring-boot-starter-jdbc'
+            implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+            runtimeOnly 'mysql:mysql-connector-java'
+            implementation group: 'com.google.code.gson', name: 'gson', version: '2.9.1'
         }
     }
 }
