--- a/spring-boot/application/src/main/resources/application.yaml
+++ b/spring-boot/application/src/main/resources/application.yaml
@@ -2,7 +2,7 @@ spring:
   jpa:
     generate-ddl: true
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
   datasource:
     url: jdbc:mysql://localhost:3306/todo_example?createDatabaseIfNotExist=true
     username: root
