--- a/spring-boot/concurrency/dependencies.gradle
+++ b/spring-boot/concurrency/dependencies.gradle
@@ -4,4 +4,6 @@ dependencies {
     implementation group: 'org.apache.commons', name: 'commons-compress', version: '1.21'
     implementation 'org.mapstruct:mapstruct:1.5.2.Final'
     annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.2.Final'
+    implementation("org.apache.poi:poi:4.1.2")
+    implementation("org.apache.poi:poi-ooxml:4.1.2")
 }
