--- a/load-testing/pom.xml
+++ b/load-testing/pom.xml
@@ -8,20 +8,26 @@
         <version>3.0.2</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>com.bs</groupId>
-    <artifactId>Module</artifactId>
+    <groupId>com.load.testing</groupId>
+    <artifactId>load-testing</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>Main Module</name>
-    <packaging>pom</packaging>
-    <description>Combine all the practice project</description>
+    <name>load-testing</name>
+    <description>Demo project for Spring Boot</description>
     <properties>
         <java.version>17</java.version>
     </properties>
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter</artifactId>
+        </dependency>
 
-    <modules>
-        <module>DataStructure</module>
-        <module>keycloak-http2</module>
-    </modules>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
 
     <build>
         <plugins>
