--- a/pom.xml
+++ b/pom.xml
@@ -2,26 +2,34 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.0.2</version>
-        <relativePath/> <!-- lookup parent from repository -->
-    </parent>
-    <groupId>com.bs</groupId>
-    <artifactId>Module</artifactId>
+
+    <groupId>com.bs.server</groupId>
+    <artifactId>bs-server</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>Main Module</name>
+    <name>Server</name>
     <packaging>pom</packaging>
     <description>Combine all the practice project</description>
     <properties>
         <java.version>17</java.version>
+        <springboot.version>3.0.2</springboot.version>
     </properties>
 
     <modules>
         <module>DataStructure</module>
         <module>keycloak-http2</module>
+        <module>load-testing</module>
     </modules>
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-dependencies</artifactId>
+                <version>${springboot.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 
     <build>
         <plugins>
@@ -33,8 +41,8 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <source>16</source>
-                    <target>16</target>
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
                     <compilerArgs>--enable-preview</compilerArgs>
                 </configuration>
             </plugin>
