--- a/pom.xml
+++ b/pom.xml
@@ -11,13 +11,17 @@
     <description>Combine all the practice project</description>
     <properties>
         <java.version>17</java.version>
+        <okio-version>2.8.0</okio-version>
         <springboot.version>3.0.2</springboot.version>
+        <swagger-parser-v3.version>2.1.11</swagger-parser-v3.version>
+        <swagger-annotations.version>2.2.8</swagger-annotations.version>
     </properties>
 
     <modules>
         <module>DataStructure</module>
         <module>keycloak-http2</module>
         <module>load-testing</module>
+        <module>contract</module>
     </modules>
     <dependencyManagement>
         <dependencies>
@@ -27,6 +31,26 @@
                 <version>${springboot.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
+            </dependency>
+            <dependency>
+                <groupId>io.swagger.parser.v3</groupId>
+                <artifactId>swagger-parser-v3</artifactId>
+                <version>${swagger-parser-v3.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.swagger.core.v3</groupId>
+                <artifactId>swagger-annotations</artifactId>
+                <version>${swagger-annotations.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.squareup.okio</groupId>
+                <artifactId>okio</artifactId>
+                <version>${okio-version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.squareup.okhttp3</groupId>
+                <artifactId>okhttp</artifactId>
+                <version>3.14.9</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
