--- a/load-testing/pom.xml
+++ b/load-testing/pom.xml
@@ -13,7 +13,6 @@
     <name>load-testing</name>
     <description>Demo project for Spring Boot</description>
     <properties>
-        <java.version>17</java.version>
     </properties>
     <dependencies>
         <dependency>
@@ -38,9 +37,8 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <source>17</source>
-                    <target>17</target>
-                    <compilerArgs>--enable-preview</compilerArgs>
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
                 </configuration>
             </plugin>
         </plugins>
