--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <module>keycloak-http2</module>
         <module>load-testing</module>
         <module>contract</module>
+        <module>client-app</module>
     </modules>
     <dependencyManagement>
         <dependencies>
@@ -65,8 +66,8 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <source>${java.version}</source>
-                    <target>${java.version}</target>
+                    <source>16</source>
+                    <target>16</target>
                     <compilerArgs>--enable-preview</compilerArgs>
                 </configuration>
             </plugin>
