--- a/spring-boot/application/src/main/resources/application.yaml
+++ b/spring-boot/application/src/main/resources/application.yaml
@@ -1,10 +1,14 @@
 spring:
+  batch:
+    job:
+      enabled: true
+    jdbc:
+      initialize-schema: always
+  sql:
+    init:
+      mode: always
   jpa:
-    generate-ddl: true
-    hibernate:
-      ddl-auto: update
-  datasource:
-    url: jdbc:mysql://localhost:3306/todo_example?createDatabaseIfNotExist=true
-    username: root
-    password: deadhead
+    defer-datasource-initialization: true
+server:
+  port: 8090
 
