--- a/spring-boot/build.gradle
+++ b/spring-boot/build.gradle
@@ -68,8 +68,12 @@ allprojects {
             testImplementation 'org.springframework.boot:spring-boot-starter-test'
 //            implementation 'org.springframework.boot:spring-boot-starter-jdbc'
             implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-            runtimeOnly 'mysql:mysql-connector-java'
+            runtimeOnly 'org.postgresql:postgresql'
             implementation group: 'com.google.code.gson', name: 'gson', version: '2.9.1'
+            implementation 'org.springframework.boot:spring-boot-starter-batch'
+            testImplementation 'org.springframework.batch:spring-batch-test'
+            implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.12.0'
+
         }
     }
 }
