--- a/spring-boot/build.gradle
+++ b/spring-boot/build.gradle
@@ -61,6 +61,7 @@ allprojects {
     afterEvaluate {
         dependencies {
             implementation 'org.springframework.boot:spring-boot-starter-web'
+            implementation 'org.springframework.boot:spring-boot-starter-hateoas'
             implementation 'org.springframework.boot:spring-boot-devtools'
             compileOnly 'org.projectlombok:lombok'
             annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
@@ -73,6 +74,11 @@ allprojects {
             implementation 'org.springframework.boot:spring-boot-starter-batch'
             testImplementation 'org.springframework.batch:spring-batch-test'
             implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.12.0'
+            implementation 'org.springframework.integration:spring-integration-amqp'
+            implementation 'org.springframework.boot:spring-boot-starter-amqp'
+            implementation 'org.springframework.boot:spring-boot-starter-integration'
+            implementation 'org.springframework.batch:spring-batch-integration'
+            implementation 'org.springframework.integration:spring-integration-file'
 
         }
     }
