--- a/kotlin-rscoket-graphql/build.gradle
+++ b/kotlin-rscoket-graphql/build.gradle
@@ -5,7 +5,7 @@ plugins {
 	id 'io.spring.dependency-management' version '1.1.0'
 	id 'org.jetbrains.kotlin.jvm' version '1.8.22'
 	id 'org.jetbrains.kotlin.plugin.spring' version '1.8.22'
-	id 'org.graalvm.buildtools.native' version '0.9.23'
+//	id 'org.graalvm.buildtools.native' version '0.9.23'
 }
 
 group = 'com.bs'
@@ -23,9 +23,27 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-graphql'
 	implementation 'com.fasterxml.jackson.module:jackson-module-kotlin'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.jetbrains.kotlin:kotlin-reflect'
+	runtimeOnly 'org.postgresql:postgresql'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.graphql:spring-graphql-test'
+
+	implementation("com.github.ben-manes.caffeine:caffeine:3.1.6")
+	implementation("com.github.ben-manes.caffeine:guava:3.1.6")
+	implementation("com.github.ben-manes.caffeine:jcache:3.1.6")
+	annotationProcessor "com.querydsl:querydsl-apt:5.0.0:jpa",
+			'org.hibernate.javax.persistence:hibernate-jpa-2.1-api:1.0.2.Final',
+			'javax.annotation:javax.annotation-api:1.3.2'
+
+	implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.6'
+	implementation group: 'org.apache.commons', name: 'commons-text', version: '1.10.0'
+
+
+}
+
+compileJava {
+	options.annotationProcessorPath = configurations.annotationProcessor
 }
 
 tasks.withType(KotlinCompile) {
