--- a/kotlin-rscoket-graphql/src/main/resources/application.properties
+++ b/kotlin-rscoket-graphql/src/main/resources/application.properties
@@ -1,3 +1,14 @@
 
 spring.graphql.graphiql.enabled=true
 spring.graphql.graphiql.path=/graphiql
+
+spring.jpa.database=postgresql
+spring.sql.init.platform=postgresql
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.datasource.url=jdbc:postgresql://localhost:5432/graphql
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql=true
