--- a/DataStructure/pom.xml
+++ b/DataStructure/pom.xml
@@ -12,6 +12,9 @@
     <artifactId>DataStructure</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>DataStructure</name>
+    <properties>
+        <drools.version>7.74.1.Final</drools.version>
+    </properties>
     <description>Data Structure Practice</description>
     <dependencies>
         <dependency>
@@ -48,6 +51,30 @@
             <groupId>org.reflections</groupId>
             <artifactId>reflections</artifactId>
             <version>0.10.2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.drools</groupId>
+            <artifactId>drools-core</artifactId>
+            <version>${drools.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.drools</groupId>
+            <artifactId>drools-compiler</artifactId>
+            <version>${drools.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.thoughtworks.xstream</groupId>
+            <artifactId>xstream</artifactId>
+            <version>1.4.20</version>
+        </dependency>
+        <dependency>
+            <groupId>org.drools</groupId>
+            <artifactId>drools-decisiontables</artifactId>
+            <version>${drools.version}</version>
         </dependency>
     </dependencies>
 </project>
